Fix z-index for header to be covering all page elements when scrolling

--- a/css-positioning/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning/css-positioning_layout-with-position/css/styles.css
@@ -26,6 +26,7 @@ body {
   height: 80px;
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
   padding: 10px;
+  z-index: 2000;
 }
 
 .header__text {
